Fixing a stuck algorithm, brought on by my own naivete. Turns out when you have lots of _possible_ task slots you can't block on their being full, because there's a lot of possible mismatches between tasks-available and people-willingness, so you need to be aware of when you're spinning your wheels and wait until tomorrow to try again.

--- a/index.css
+++ b/index.css
@@ -38,7 +38,7 @@ IMG
 }
 .label
 {
-    width: 200px;
+    width: 250px;
     height: 1.3em;
     float:left;
     text-align: right;
